--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -162,7 +162,7 @@ Leaf area density (*i.e.*, leaf area per unit volume) patterns along the vertica
 Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the canopy layer (i.e., that formed by the crowns of dominant trees), but understory leaf area density is often relatively high as well, sometimes causing undulating patterns with height [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,@terborghVerticalComponentPlant1985; @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989]. 
 In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be predominantly accumulated in the lower canopy or understory layers [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @baldocchiSeasonalVariationEnergy1997; @hanberryOpenForestEcosystems2020; @lawLeafAreaDistribution2001;@bonan_ecological_2016]. 
 Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkAmazonForestCarbon2012; @hanberryOpenForestEcosystems2020]. 
-In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019; @smithSeasonalDroughtrelatedChanges2019; @tangLightdrivenGrowthAmazon2017]. 
+In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019; @smithSeasonalDroughtrelatedChanges2019; @tangLightdrivenGrowthAmazon2017; @nunesForestFragmentationImpacts2022]. 
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
 
 Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor.
@@ -382,7 +382,8 @@ In temperate deciduous forests, seasonal warming occurs earlier in the sheltered
 Early leaf-out gives tree saplings and seedlings a window for disproportionately high photosynthesis -- amounting to the majority of annual carbon fixation for some seedlings -- before canopy foliage and reduces light availability [@augspurgerDifferencesLeafPhenology2003; @leeSpringPhenologicalEscape2021]. 
 Within tropical dry-season-deciduous species, the fraction of seasonally deciduous individuals has been found to increase toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c].
 Similarly, on the interspecific level, across increasing tree size classes, there is an increase in the fractions of deciduous species [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
-Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019].
+Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019;@tangLightdrivenGrowthAmazon2017;@nunesForestFragmentationImpacts2022]. 
+For instance, in a central Amazonian forest, the upper canopies of both interior and edge forests shed leaves when maximum daily $T_{air}$ exceeded ~35$^\circ$C [@nunesForestFragmentationImpacts2022].
 Leaf turnover is faster in the upper canopy than the understory [@osadaLeafDynamicsMaintenance2001], and as a result upper canopy leaves are, on average, younger than shade leaves.
 Leaf age distributions affect forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and stress tolerance via age specific leaf function [@albertAgedependentLeafPhysiology2018; @kikuzawaSynthesisRelationshipsLeaf2006; @mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015].
 Leaf phenology thereby both responds to and influences the vertical structure of forest microenvironments and function.
@@ -391,7 +392,9 @@ Leaf phenology thereby both responds to and influences the vertical structure of
 ## 4. Leaf gas exchange and its thermal sensitivity
 
 Leaf metabolism is strongly shaped by $T_{leaf}$, and by the traits and environmental drivers reviewed above, all of which vary across vertical forest gradients (Fig. `r fig_schematic`). 
-However, as we detail below, few studies have evaluated temperature responses of leaf metabolic rates along a vertical forest gradient, or compared sun and shade leaves (Table `r table_leaf_metabolism`). \newpage
+However, as we detail below, few studies have evaluated temperature responses of leaf metabolic rates along a vertical forest gradient, or compared sun and shade leaves (Table `r table_leaf_metabolism`). 
+
+\newpage
 
 **Table `r table_leaf_metabolism`.** Summary of observed variation in Leaf gas exchange and its thermal sensitivity across the vertical gradient and/or between sun and shade leaves. Studies listed here were compiled using a systematic review process, as described in Supplementary Information Methods `r appendix_lit_review_methods`.
 
@@ -475,8 +478,8 @@ This points to a dominant role of vertical profiles in the biophysical environme
 Vertical gradients also affect the climate sensitivity of metabolism and growth.
 Stomatal conductance can be strongly limited by high atmospheric demand (low RH, high $T_{air}$ and VPD) even when soil water is plentiful [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016].
 Therefore, periods of high atmospheric demand -- be these on time scales of hours, days, or seasons -- tend to cause greater reductions in transpiration and photosynthesis in tall trees that occupy canopy positions in closed-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. 
-This is consistent with the observation that $g_s$ limitation increases with height across the vertical profile (section 4.1, Table `r table_leaf_metabolism`). 
-More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004] -- often combined with greater effective rooting depth -- may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and reduce adjustment of traits related to carbon metabolism during drought [@bartholomewSmallTropicalForest2020]. 
+This is consistent with observations that both dry season leaf loss (section 3.6, Table `r table_leaf_traits`) and $g_s$ limitation (section 4.1, Table `r table_leaf_metabolism`) increases with height across the vertical profile. 
+More active regulation of transpiration by tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004] -- often combined with greater effective rooting depth -- may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and reduce the need for adjustment of traits related to carbon metabolism during drought [@bartholomewSmallTropicalForest2020]. 
 This results in decreasing carbon isotope discrimination, indicative of greater $g_s$ limitation, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
 
 In turn, the drought sensitivity of woody growth tends to be greater in canopy trees than in smaller trees with less exposed crowns. 
@@ -508,10 +511,10 @@ Large trees also dominate in terms of woody above ground net primary productivit
 ![**Figure `r fig_ecosystem`. Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests.** Panel (a) is from @kunertRevisedHydrologicalModel2017; panel (b) presents averages for 14 tropical forests from @piponiotDistributionBiomassDynamicsinpress.](schematics/ecosystem vertical partitioning/ecosystem partitioning.png)
 
 It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but probable responses can be inferred based on the patterns and mechanisms reviewed above.
-We expect that transpiration, GPP, and $ANPP_{woody}$ should all be more sensitive to high temperatures in the upper canopy than in the understory -- at least under conditions of moderate to high VPD [@grossiordPlantResponsesRising2020]. 
+We expect that transpiration, GPP, and $ANPP_{woody}$ should all be more sensitive to high temperatures in the upper canopy than in the understory -- at least under conditions of moderate to high VPD [@grossiordPlantResponsesRising2020; @nunesForestFragmentationImpacts2022]. 
 Because canopy trees dominate these fluxes (Fig. `r fig_ecosystem`), their responses will strongly influence the whole-ecosystem response, potentially with modest buffering by the understory. 
 Thus, for example, increases in canopy temperature reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. 
-Yet there is also evidence that GPP and ecosystem respiration are less sensitive to heat and drought stress in older forests than in young forests [@xuSeasonalVariabilityForest2020], perhaps in part because of more complex vertical structuring [@jonesManagingRedPine2019].
+Yet there is also evidence that GPP and ecosystem respiration are less sensitive to heat and drought stress in older forests than in young forests [@xuSeasonalVariabilityForest2020], perhaps in part because of more complex vertical structuring [@jonesManagingRedPine2019;@nunesForestFragmentationImpacts2022].
 A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an *El Niño* drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. 
 It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. `r fig_leaf_T`) and tree ring evidence (Fig. `r fig_treerings`) suggests that understory trees may respond more negatively to hot, wet conditions. 
 Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
@@ -533,7 +536,7 @@ Our in-depth review sheds some light as to how responses are likely to vary acro
 
 To the extent that warming is coupled to drought, we expect that the tallest trees will usually be hardest-hit, particularly in cases where the drought is severe, and that this will occur at least in part because their crowns are positioned in a more challenging microenvironment [section 5.1, Figs. `r fig_schematic`- `r fig_treerings`, e.g., @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019; @anderson-teixeiraJointEffectsClimate2022].
 Specifically, warming will disproportionately stress tall canopy trees when $T_{air}$ and accompanying VPD rise enough that sun-exposed leaves cannot maintain both hydraulic safety and the transpirational cooling required to keep $T_{leaf}$ below damaging thresholds.
-In contrast, understory trees will be more sheltered during droughts and heat waves, and in some settings may benefit from increased light availability [@bennettLargerTreesSuffer2015;@hoganDroughtInterannualVariability2019].
+In contrast, understory trees will be more sheltered during droughts and heat waves, and in some settings may benefit from increased light availability [@bennettLargerTreesSuffer2015;@hoganDroughtInterannualVariability2019; @nunesForestFragmentationImpacts2022].
 An interesting open question is to what extent these patterns vary with the nature of the drought, including the relative contributions to stress from low soil moisture versus high VPD. 
 While the two are coupled over longer time scales [@humphreySoilMoistureAtmosphere2021; @novickIncreasingImportanceAtmospheric2016], the latter can be intense for short periods even when soil moisture is high (e.g., during a heat wave) and exerts a stronger influence on ET in many biomes [@novickIncreasingImportanceAtmospheric2016]. 
 Given the mechanisms reviewed here, we might expect that atmospheric dryness in particular skews the stress more towards the exposed canopy trees.   
@@ -564,7 +567,7 @@ Moreover, large trees are also disproportionately impacted by other climate-rela
 Increase in the severity and frequency of heat waves, accompanied with an increase in VPD and ET, can exacerbate effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
 Forest fragmentation also disproportionately kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
 Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases incident radiation levels and temperatures within the forest [@juckerCanopyStructureTopography2018; @starkReframingTropicalSavannization2020]. 
-Such changes often result in increased growth of smaller trees, which benefit from increased light [@hoganDroughtInterannualVariability2019;@bennettLargerTreesSuffer2015], and wetter forests can prove quite resilient to canopy disturbance [@millerReducedImpactLogging2011].
+Such changes often result in increased growth of smaller trees, which benefit from increased light [@hoganDroughtInterannualVariability2019;@bennettLargerTreesSuffer2015; @nunesForestFragmentationImpacts2022], and wetter forests can prove quite resilient to canopy disturbance [@millerReducedImpactLogging2011].
 However, this shift to hotter and drier microclimates makes some forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
 Severe degradation impacts can cause dramatic ecological state changes (e.g., the transition from forest to more open, savanna-like vegetation in tropical forest regions through 'savannization') and non-linear threshold responses in energy balance and associated microclimates, with implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020].
 Such dynamics are likely to be amplified by warming temperatures, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but may have reduced probability of recovering and persisting when affected by severe canopy disturbance [@tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @mcdowellPervasiveShiftsForest2020; @floresFloodplainsAchillesHeel2017].
@@ -629,7 +632,6 @@ The growing availability of these data makes this an opportune time to link fine
 
 
 ## IV. Conclusions
-
 
 Across vertical gradients, directional trends in the biophysical environment and leaf traits are the rule, driving variation in the physiology and ecology that have these as their underpinnings (Fig. `r fig_schematic`).
 However, there remains a lot of uncertainty as to how temperature sensitivity of foliar gas exchange varies across these vertical gradients.
