--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6391,10 +6391,16 @@
   file = {/Users/nidhivinod/Zotero/storage/556G6RFM/Keppel et al. - 2017 - Microhabitats and canopy cover moderate high summe.pdf}
 }
 
-@article{kesselmeierBiogenicVolatileOrganic,
+@article{kesselmeierBiogenicVolatileOrganic1999,
   title = {Biogenic {{Volatile Organic Compounds}} ({{VOC}}): {{An Overview}} on {{Emission}}, {{Physiology}} and {{Ecology}}},
   author = {Kesselmeier, J and Staudt, M},
+  date = {1999},
+  journaltitle = {Journal of Atmospheric Chemistry},
+  volume = {33},
+  number = {23–88},
   pages = {66},
+  doi = {10.1023/A:1006127516791},
+  url = {https://link.springer.com/article/10.1023/A:1006127516791#citeas},
   abstract = {This overview compiles the actual knowledge of the biogenic emissions of some volatile organic compounds (VOCs), i.e., isoprene, terpenes, alkanes, alkenes, alcohols, esters, carbonyls, and acids. We discuss VOC biosynthesis, emission inventories, relations between emission and plant physiology as well as temperature and radiation, and ecophysiological functions. For isoprene and monoterpenes, an extended summary of standard emission factors, with data related to the plant genus and species, is included. The data compilation shows that we have quite a substantial knowledge of the emission of isoprene and monoterpenes, including emission rates, emission regulation, and biosynthesis. The situation is worse in the case of numerous other compounds (other VOCs or OVOCs) being emitted by the biosphere. This is reflected in the insufficient knowledge of emission rates and biological functions. Except for the terpenoids, only a limited number of studies of OVOCs are available; data are summarized for alkanes, alkenes, carbonyls, alcohols, acids, and esters. In addition to closing these gaps of knowledge, one of the major objectives for future VOC research is improving our knowledge of the fate of organic carbon in the atmosphere, ending up in oxidation products and/or as aerosol particles.},
   langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/RAJMNDGM/Kesselmeier and Staudt - Biogenic Volatile Organic Compounds (VOC) An Over.pdf}
