--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -10868,6 +10868,25 @@
   file = {/Users/nidhivinod/Zotero/storage/DFV3GY5Z/Pincebourde and Casas - 2019 - Narrow safety margin in the phyllosphere during th.pdf;/Users/nidhivinod/Zotero/storage/ZSJ6SDWI/5588.html}
 }
 
+@article{piponiotDistributionBiomassDynamics2022,
+  title = {Distribution of Biomass Dynamics in Relation to Tree Size in Forests across the World},
+  author = {Piponiot, Camille and Anderson-Teixeira, Kristina J. and Davies, Stuart J. and Allen, David and Bourg, Norman A. and Burslem, David F. R. P. and Cárdenas, Dairon and Chang-Yang, Chia-Hao and Chuyong, George and Cordell, Susan and Dattaraja, Handanakere Shivaramaiah and Duque, Álvaro and Ediriweera, Sisira and Ewango, Corneille and Ezedin, Zacky and Filip, Jonah and Giardina, Christian P. and Howe, Robert and Hsieh, Chang-Fu and Hubbell, Stephen P. and Inman-Narahari, Faith M. and Itoh, Akira and Janík, David and Kenfack, David and Král, Kamil and Lutz, James A. and Makana, Jean-Remy and McMahon, Sean M. and McShea, William and Mi, Xiangcheng and Bt. Mohamad, Mohizah and Novotný, Vojtěch and O'Brien, Michael J. and Ostertag, Rebecca and Parker, Geoffrey and Pérez, Rolando and Ren, Haibao and Reynolds, Glen and Md Sabri, Mohamad Danial and Sack, Lawren and Shringi, Ankur and Su, Sheng-Hsin and Sukumar, Raman and Sun, I-Fang and Suresh, Hebbalalu S. and Thomas, Duncan W. and Thompson, Jill and Uriarte, Maria and Vandermeer, John and Wang, Yunquan and Ware, Ian M. and Weiblen, George D. and Whitfeld, Timothy J. S. and Wolf, Amy and Yao, Tze Leong and Yu, Mingjian and Yuan, Zuoqiang and Zimmerman, Jess K. and Zuleta, Daniel and Muller-Landau, Helene C.},
+  date = {2022},
+  journaltitle = {New Phytologist},
+  volume = {234},
+  number = {5},
+  pages = {1664--1677},
+  issn = {1469-8137},
+  doi = {10.1111/nph.17995},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/nph.17995},
+  urldate = {2022-08-31},
+  abstract = {Tree size shapes forest carbon dynamics and determines how trees interact with their environment, including a changing climate. Here, we conduct the first global analysis of among-site differences in how aboveground biomass stocks and fluxes are distributed with tree size. We analyzed repeat tree censuses from 25 large-scale (4–52 ha) forest plots spanning a broad climatic range over five continents to characterize how aboveground biomass, woody productivity, and woody mortality vary with tree diameter. We examined how the median, dispersion, and skewness of these size-related distributions vary with mean annual temperature and precipitation. In warmer forests, aboveground biomass, woody productivity, and woody mortality were more broadly distributed with respect to tree size. In warmer and wetter forests, aboveground biomass and woody productivity were more right skewed, with a long tail towards large trees. Small trees (1–10 cm diameter) contributed more to productivity and mortality than to biomass, highlighting the importance of including these trees in analyses of forest dynamics. Our findings provide an improved characterization of climate-driven forest differences in the size structure of aboveground biomass and dynamics of that biomass, as well as refined benchmarks for capturing climate influences in vegetation demographic models.},
+  langid = {english},
+  keywords = {biomass,climate gradients,forests,tree size distribution,woody mortality,woody productivity},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17995},
+  file = {/Users/nidhivinod/Zotero/storage/7CU6JY5R/Piponiot et al. - 2022 - Distribution of biomass dynamics in relation to tr.pdf}
+}
+
 @article{piponiotDistributionBiomassDynamicsinpress,
   title = {Distribution of Biomass Dynamics in Relation to Tree Size in Forests across the World.},
   author = {Piponiot, Camille and Anderson-Teixeira KJ and Davies, SJ and Allen D, Bourg NA, Burslem and {DFRP, Cárdenas D, Chang-Yang C-H, Chuyong G, Cordell S, Dattaraja HS,} and {Duque Á, Ediriweera S, Ewango C, Ezedin Z, Filip J, Giardina C, Howe R,} and {Hsieh, C-F, Hubbell S, Inman-Narahari FM, Itoh A, Janik D, Kenfack D,} and {Kral K, Lutz JA, Makana J-R, McMahon S, McShea W, Mi X, Mohamad M,} and {Novotny V, O’Brien MJ, Ostertag R, Parker G, Pérez R, Ren H-B, Reynolds} and {G, Sabri MDM, Sack L, Shringi A, Su S-H, Sukumar R, Sun I-F, Suresh HS,} and {Thomas DW, Thompson J, Uriarte M, Vandermeer J, Wang Y, Ware IM, Weiblen} and {GD, Whitfeld TJS, Wolf Amy, Yao TL, Yu M, Yuan Z, Zimmerman JK, Zuleta} and {D, Muller-Landau HC. 2022.}},
