--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -11382,6 +11382,14 @@
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/qj.49711347507}
 }
 
+@article{rcoreteamCoreTeam20212021,
+  title = {R {{Core Team}} (2021). {{R}}:  {{A}} Language and Environment for Statistical Computing. {{R Foundation}} for {{Statistical Computing}}, {{Vienna}}, {{Austria}}.},
+  author = {R Core Team},
+  date = {2021},
+  url = {https://www.r-project.org/},
+  urldate = {2022-09-01}
+}
+
 @article{readComparativeResponsesTemperature1990,
   title = {Comparative {{Responses}} to {{Temperature}} of the {{Major Canopy Species}} of {{Tasmanian Cool Temperate Rain-Forest}} and {{Their Ecological Significance}} .{{II}}. {{Net Photosynthesis}} and {{Climate Analysis}}},
   author = {Read, J. and Busby, J. R.},
@@ -13925,14 +13933,6 @@
   url = {https://academic.oup.com/view-large/195588519},
   urldate = {2020-11-16},
   file = {/Users/nidhivinod/Zotero/storage/J6QWUGKJ/195588519.html}
-}
-
-@article{teamCoreTeam20212021,
-  title = {R {{Core Team}} (2021). {{R}}:  {{A}} Language and Environment for Statistical Computing. {{R Foundation}} for {{Statistical Computing}}, {{Vienna}}, {{Austria}}.},
-  author = {Team, R Core},
-  date = {2021},
-  url = {https://www.r-project.org/},
-  urldate = {2022-09-01}
 }
 
 @online{TemperatureResponseC3,
